--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.12.2",
     "mp3-duration": "^1.1.0",
     "node-fetch": "^2.6.1",
+    "rate-limiter-flexible": "^2.2.1",
     "request-ip": "^2.1.3",
     "short-uuid": "^4.1.0",
     "uuid": "^8.3.2"
