--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.1",
     "rate-limiter-flexible": "^2.2.1",
     "request-ip": "^2.1.3",
+    "serve-favicon": "^2.5.0",
     "short-uuid": "^4.1.0",
     "uuid": "^8.3.2"
   },
