update valid text

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.6",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "fold-to-ascii": "^5.0.0",
     "geoip-lite": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
